--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,14 +22,27 @@ a:hover {
   color: #535bf2;
 }
 
+html{
+  height: 100%;
+  width: 100%;
+}
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
-
+#root>div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+input{
+  padding: 5px;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -45,6 +58,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 10px;
 }
 button:hover {
   border-color: #646cff;
