--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,7 @@ body {
 }
 input{
   padding: 5px;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 h1 {
   font-size: 3.2em;
